--- a/app/src/main/res/layout/activity_edit_food.xml
+++ b/app/src/main/res/layout/activity_edit_food.xml
@@ -4,13 +4,21 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/imvIcon"
-        android:layout_width="@dimen/icon"
-        android:layout_height="@dimen/icon"
-        android:layout_margin="@dimen/padding20" />
 
-    <LinearLayout
+
+   <LinearLayout
+
+       android:layout_width="wrap_content"
+       android:layout_height="match_parent">
+       <ImageView
+           android:id="@+id/imvIcon"
+           android:layout_width="@dimen/icon"
+           android:layout_height="@dimen/icon"
+           android:layout_margin="@dimen/padding20" />
+
+   </LinearLayout>
+
+<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -38,5 +46,4 @@
 
 
     </LinearLayout>
-
 </LinearLayout>
