--- a/app/src/main/res/layout/activity_news_detail.xml
+++ b/app/src/main/res/layout/activity_news_detail.xml
@@ -15,14 +15,15 @@
         android:layout_height="wrap_content">
 
         <ImageView
+
             android:id="@+id/imvBack"
-            android:src="@mipmap/ic_news"
+            android:src="@mipmap/ic_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/txtTitle"
-            android:textSize="@dimen/h1"
+            android:textSize="@dimen/h2"
             android:textStyle="bold"
             android:textColor="@color/textcolorPrimary"
             android:layout_centerInParent="true"
