--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -39,8 +39,9 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="@dimen/padding20"
-        android:layout_below="@+id/realTop"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/realTop">
 
         <!--Name-->
         <LinearLayout
