--- a/app/src/main/res/layout/activity_receive.xml
+++ b/app/src/main/res/layout/activity_receive.xml
@@ -104,7 +104,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="2.5"
+                android:layout_weight="2.3"
                 android:text="NameFood"
                 android:textSize="@dimen/h2"
                 android:textStyle="bold" />
@@ -122,8 +122,8 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:text="๊Unit"
+                android:layout_weight="0.7"
+                android:text="หน่วย"
                 android:textSize="@dimen/h2"
                 android:textStyle="bold" />
 
@@ -131,7 +131,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="0.7"
                 android:text="ราคา"
                 android:textSize="@dimen/h2"
                 android:textStyle="bold" />
@@ -139,7 +139,7 @@
 
         <!--ListView-->
         <ListView
-            android:id="@+id/LivReceive"
+            android:id="@+id/livReceive"
             android:layout_width="match_parent"
             android:layout_height="match_parent"></ListView>i
 
