--- a/app/src/main/res/layout/activity_edit_promotion.xml
+++ b/app/src/main/res/layout/activity_edit_promotion.xml
@@ -125,7 +125,7 @@
         
         <ImageView
             android:id="@+id/buttonDele"
-            android:src="@mipmap/ic_authen"
+            android:src="@drawable/deleteproduct"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
